# fibBot

./: .env  Cargo.toml  Dockerfile  README.md  action.yml  workflow.yml
.github/workflows/: ci.yml
src/: comment.rs  extract_numbers.rs  fib_vector.rs  fibonacci.rs  get_pr_content.rs  main.rs  read.rs
