[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
octocrab = "0.43.0"
dotenv = "0.15.0"